--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,37 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node.js build artifacts and dependencies
+node_modules/
+dist/
+build/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Next.js build output
+.next/
+out/
 
-# testing
-/coverage
+# Python build artifacts and caches
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.venv/
+venv/
 
-# next.js
-/.next/
-/out/
+# Environment variables
+.env
+.env.local
 
-# production
-/build
+# Docker Compose
+docker/docker-compose.yml
 
-# misc
+# Mac OS
 .DS_Store
-*.pem
 
-# debug
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# VSCode settings
+.vscode/
 
-# vercel
-.vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
