--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,21 @@
-# Node.js build artifacts and dependencies
-node_modules/
+**/node_modules/
+**/.next/
 dist/
 build/
-
-# Next.js build output
-.next/
 out/
-
-# Python build artifacts and caches
-__pycache__/
+**/__pycache__/
 *.pyc
 *.pyo
 *.pyd
-.venv/
+**/.venv/
 venv/
-
-# Environment variables
 .env
-.env.local
-
-# Docker Compose
+.env.*
 docker/docker-compose.yml
-
-# Mac OS
 .DS_Store
-
-# Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# VSCode settings
 .vscode/
-
-
+.idea/
