--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   frontend:
     build:
-      context: .
+      context: ../
       dockerfile: docker/Dockerfile.frontend
     ports:
       - "3000:3000"
@@ -12,7 +12,7 @@ services:
 
   backend:
     build:
-      context: .
+      context: ../
       dockerfile: docker/Dockerfile.backend
     ports:
       - "5001:5001"
@@ -31,7 +31,7 @@ services:
 
   ai:
     build:
-      context: .
+      context: ../
       dockerfile: docker/Dockerfile.ai
     ports:
       - "8000:8000"
