--- a/docker/Dockerfile.ai
+++ b/docker/Dockerfile.ai
@@ -3,11 +3,11 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # Copy the requirements and install Python dependencies
-COPY ai-service/requirements.txt ./
+COPY ai-rag-service/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the entire AI service source code
-COPY ai-service/ ./
+COPY ai-rag-service/ ./
 
 # Expose the port used by FastAPI
 EXPOSE 8000
