--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -2,7 +2,7 @@
 FROM node:18-alpine AS builder
 WORKDIR /app
 
-# Copy package files and install dependencies
+# Copy package.json and package-lock.json from the frontend folder
 COPY frontend/package.json frontend/package-lock.json ./
 RUN npm ci
 
@@ -10,7 +10,7 @@ RUN npm ci
 COPY frontend/ ./
 RUN npm run build
 
-# Production image
+# Production image for frontend
 FROM node:18-alpine
 WORKDIR /app
 
