--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -21,7 +21,7 @@ RUN npm ci --production
 # Copy built output and public assets from builder
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/next.config.js ./
+COPY --from=builder /app/next.config.ts ./
 
 # Expose the port Next.js uses
 EXPOSE 3000
