--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./init-db:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
 
